cargo-features = ["panic-immediate-abort"]

[package]
name = "uruntime"
version = "0.5.3"
readme = "README.md"
license = "MIT"
repository = "https://github.com/VHSgunzo/uruntime"
description = "Universal RunImage and AppImage runtime with SquashFS and DwarFS supports"
edition = "2021"

[profile.release]
lto = true
debug  = false
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "immediate-abort"

[profile.dev]
opt-level = 0

[features]
default = [
    "dwarfs",
    "squashfs",
]
upx = []
lite = []
dwarfs = []
squashfs = []
appimage = []

[build-dependencies]
cfg-if = "1.0.4"
indexmap = "2.12.0"
zstd = { version = "0.13.3", default-features = false }

[dependencies]
which = "8.0.0"
cfg-if = "1.0.0"
goblin = "0.10.3"
procfs = "0.18.0"
num_cpus = "1.17.0"
signal-hook = "0.3.18"
zstd = { version = "0.13.3", default-features = false }
xxhash-rust = { version = "0.8.15", features = [ "xxh3" ] }
nix = { version = "0.30.1", features = [ "fs", "signal", "mount" ] }
dotenv = { git = "https://github.com/VHSgunzo/dotenv.git" }
memfd-exec = { git = "https://github.com/VHSgunzo/memfd-exec.git" }
